# Desktop-Agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  WORKFLOWS.md  pyproject.toml  requirements.txt
.cursor/: mcp.json.example
.cursor/agents/: automation-engineer.md  data-analyst.md  excel-modeler.md  orchestrator.md
knowledge/: README.md
knowledge/automation_engineer/: automation_runbook.md
knowledge/data_analyst/: data_dictionary.md
knowledge/excel_modeler/: pricing_models.md
knowledge/shared/: desk_overview.md
models/: registry.yaml
models/workbooks/: .gitkeep
sql/: README.md  locked_loans_by_product.sql  pipeline_summary_by_coupon.sql
sql/snowflake/: locked_loans_by_product.sql  pipeline_summary_by_coupon.sql
sql/sqlserver/: locked_loans_by_product.sql
src/pennymac_agent/: __init__.py  __main__.py  agents.py  crew.py  knowledge.py  llm.py  main.py  mcp_server.py
src/pennymac_agent/agents/: __init__.py  base_agent.py  excel_agent.py  snowflake_agent.py  sqlserver_agent.py  vba_agent.py
src/pennymac_agent/config/: settings.py
src/pennymac_agent/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/pennymac_agent/orchestrator/: __init__.py  orchestrator.py  router.py
src/pennymac_agent/tools/: __init__.py  _sql_common.py  discovery_tool.py  docs_tool.py  excel_tool.py  snowflake_tool.py  sqlserver_tool.py  vba_tool.py
src/pennymac_agent/utils/: __init__.py  logging.py
tests/: conftest.py  test_crew_build.py  test_knowledge.py  test_mcp_server.py  test_routing.py  test_sqlserver_agent.py  test_tools.py
vba/: ExportOutputsToCsv.bas  README.md
