[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pennymac-trading-agent"
version = "0.2.0"
description = "MCP tools + Cursor Subagents for PennyMac Secondary Market trading workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "snowflake-connector-python[pandas]>=3.12.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pyodbc>=5.1.0",
    "SQLAlchemy>=2.0.0",
    "xlwings>=0.31.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
pennymac-mcp = "pennymac_agent.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
